--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 version: '3'
 
 services:
-  web:
+  web: &web
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
       - "8000:8000"
+    depends_on:
+      - rabbitmq
+      - celery_worker
+  rabbitmq:
+    image: rabbitmq:3.7-alpine
+  celery_worker:
+    <<: *web
+    command: celery -A apps.slack_messaging worker --loglevel=info
+    ports: []
+    depends_on:
+      - rabbitmq
