async slack service working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     image: rabbitmq:3.7-alpine
   celery_worker:
     <<: *web
-    command: celery -A apps.slack_messaging worker -B --loglevel=info
+    command: celery -A apps.slack_messaging.celery_app worker -B --loglevel=info
     ports: []
     depends_on:
       - rabbitmq
